# cbsms

./: AGENTS.md  CMakeLists.txt  README.md  cbsms.rbl  cbsms.repos  package.xml  zak_belief_odom_20260505.repos  zak_cbsms.rbl
docker/: Dockerfile  README.md  build_in_container.sh  build_workspace.sh  cbsms.dependencies.repos  compose.yml  shell.sh  start_container.sh
docs/: 2026-05-03_sender_side_filter_debug.md  2026-05-04_belief_odometry_factors.md  2026-05-05_mike_handoff_belief_odometry.md  2026-05-05_zak_vs_mike_branch_delta.md  2026-05-08_belief_add_path_cleanup.md  experiment_reports.md  project_understanding.md  rerun_commands.md
launch/: s3e_alpha_liorf_kimera_topics.launch
tools/: cbsms_experiment.py  run_s3e_report.sh
